# atomic-bitset

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/immutableoctet/atomic_bitset/: atomic_bitset.hpp
test/: CMakeLists.txt
test/source/: _atomic-bitset_test.cpp  atomic_bitset_test.cpp
